Inputs containing nested documents cause assertion error in stitch_projection_create

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.9
    • Affects Version/s: None
    • Component/s: Querying
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Hitting an error calling the stitch matcher library:
      Invariant failure Hit a MONGO_UNREACHABLE! src/mongo/db/exec/projection_exec.cpp 127

      This seems to happen for any input to `stitch_support_v1_projection_create` where the `spec` argument is a doc that contains an embedded doc, e.g.

      { a: { b : 0 } }

       

            Assignee:
            Jacob Evans (Inactive)
            Reporter:
            Michael O'Brien
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: