SERVER-39523 Run validity checking before allowing Stitch lib projection