src/mongo/db/query/parsed_projection.cpp
@@ -240,7 +240,7 @@ Status ParsedProjection::make(OperationContext* opCtx,
             }
 
             std::string matchfield = mongoutils::str::before(elem.fieldName(), '.');
-            if (!_hasPositionalOperatorMatch(query, matchfield)) {
+            if (query && !_hasPositionalOperatorMatch(query, matchfield)) {
                 mongoutils::str::stream ss;
                 ss << "Positional projection '" << elem.fieldName() << "' does not "
                    << "match the query document.";
