src/mongo/embedded/stitch_support/stitch_support.cpp
@@ -39,11 +39,13 @@
 #include "mongo/db/matcher/matcher.h"
 #include "mongo/db/ops/parsed_update.h"
 #include "mongo/db/query/collation/collator_factory_interface.h"
+#include "mongo/db/query/parsed_projection.h"
 #include "mongo/db/service_context.h"
 #include "mongo/db/update/update_driver.h"
 #include "mongo/util/assert_util.h"
 
 #include <algorithm>
+#include <memory>
 #include <string>
 
 #if defined(_WIN32)
@@ -138,6 +140,20 @@ struct ServiceContextDestructor {
 
 using EmbeddedServiceContextPtr = std::unique_ptr<mongo::ServiceContext, ServiceContextDestructor>;
 
+ProjectionExec makeProjectionExecChecked(OperationContext* opCtx,
+                                         const BSONObj& spec,
+                                         const MatchExpression* queryExpression,
+                                         const CollatorInterface* collator) {
+    /**
+     * ParsedProjction::make performs necessary checks to ensure a projection spec is valid however
+     * we are not interested in the ParsedProjection object it produces.
+     */
+    ParsedProjection* dummy;
+    uassertStatusOK(ParsedProjection::make(opCtx, spec, queryExpression, &dummy));
+    delete dummy;
+    return ProjectionExec(opCtx, spec, queryExpression, collator);
+}
+
 }  // namespace
 }  // namespace mongo
 
@@ -178,10 +194,11 @@ struct stitch_support_v1_projection {
                                  stitch_support_v1_collator* collator)
         : client(std::move(client)),
           opCtx(this->client->makeOperationContext()),
-          projectionExec(opCtx.get(),
-                         pattern.getOwned(),
-                         matcher ? matcher->matcher.getMatchExpression() : nullptr,
-                         collator ? collator->collator.get() : nullptr),
+          projectionExec(mongo::makeProjectionExecChecked(
+              opCtx.get(),
+              pattern.getOwned(),
+              matcher ? matcher->matcher.getMatchExpression() : nullptr,
+              collator ? collator->collator.get() : nullptr)),
           matcher(matcher) {
         uassert(51050,
                 "Projections with a positional operator require a matcher",
